# cotton2k-core

./: .gitignore  .pre-commit-config.yaml  README.rst  compile_flags.txt  pyproject.toml  setup.py
cotton2k/: __init__.py
cotton2k/core/: .gitignore  __init__.py  _simulation.pyi  _simulation.pyx  _soil_thermology.pyi  _soil_thermology.pyx  climate.py  cotton2k.schema.json  growth.py  meteorology.py  nitrogen.py  phenology.py  photo.py  root.py  simulation.py  soil.py  stem.py  thermology.py
src/: climate.rs  lib.rs  root.rs  soil.rs  tests.rs
src/_cotton2k/: .gitignore  FruitingSite.h  GeneralFunctions.h  GettingInput_2.cpp  InitializeGlobal.cpp  Simulation.hpp  Soil.h  SoilNitrogen.cpp  SoilNitrogen.h  SoilProcedures.h  SoilProcedures_2.cpp  SoilProcedures_3.cpp  SoilTemperature.h  SoilTemperature_3.cpp  State.hpp  __init__.py  climate.py  cxx.pxd  fruit.py  fruiting_site.pxd  global.cpp  global.h  leaf.py  rs.pxd  simulation.pxd  simulation.pyi  simulation.pyx  soil.pxd  soil.py  state.pxd  state.pyx
src/cotton2k/core/: __init__.py  cotton2k.schema.json  nitrogen.py  phenology.py  photo.py  root.py  simulation.py  stem.py
tests/: conftest.py  hazor84.csv  test_climate.py  test_io.py  test_nitrogen.py  test_phenology.py  test_photosynthesis.py  test_root.py  test_utils.py
